--- a/gradle.properties
+++ b/gradle.properties
@@ -36,7 +36,7 @@ loader_version_range=[46,)
 mapping_channel=parchment
 # The mapping version to query from the mapping channel.
 # This must match the format required by the mapping channel.
-mapping_version=1.19.2-2022.08.14-1.20
+mapping_version=2023.06.26-1.20.1
 
 jei_version=14.0.0.9
 
